Fix highlighting transition issue when jumping to pinned or flagged posts

--- a/sass/components/_post.scss
+++ b/sass/components/_post.scss
@@ -2027,3 +2027,14 @@
     animation-delay: 5s;
     animation-fill-mode: forwards;
 }
+
+@keyframes postPinnedOrFlaggedHighlight {
+    100% {
+      background: initial;
+      background-color: var(--mention-highlight-bg-12);
+    }
+}
+
+.app__body .app__content .post.post--pinned-or-flagged-highlight {
+    animation-name: postPinnedOrFlaggedHighlight;
+}
